Corrigindo endpoint de gincana
